  to conform with reorder.factor method in stats package, due to collision
  bug. Argument 'make.ordered' is now 'order' and old argument 'order' is
  now 'new.order'! Therefore, you have to implicitly specify new.order i.e.

  reorder(trt, new.order=c("PLACEBO", "300 MG", "600 MG", "1200 MG"))

- trim() gains ... argument.

CHANGES FROM 2.1.X to 2.3.0 (2006-09-19)
---------------------------------------

- Added mapLevels(), which produces a map with information on levels and/or
  internal integer codes.  Contributed by Gregor Gorjanc.

- Extended dropLevels() to work on the factors contained in a data
  frame, as well as individual factors.

- Add unknown(), which changes given unknown value to NA and vice
  versa. Contributed by Gregor Gorjanc.

- Extended trim() to handle a variety of data types data.frames,
  lists, factors, etc.  Code changes contributed by Gregor Gorjanc.

- Added resample() command that acts like sample() except that it
  _always_ samples from the arguments provided, even if only a single
  argument is present.  This differs from sample() which behaves
  differently in this case.

- Updated my email address.

CHANGES IN GDATA 2.1.2
-----------------------

 - Fixed bug in interleave.R - option to covert 1-column matrices to
   vector (based on Andrew Burgess's suggestion)

 - Updated Greg and Jim's email adresses

 - ll.R: Suppressed warning message in attach() call.

 - frameApply.Rd, reorder.Rd: Remove explicit loading of
   gtools in examples, so that failure to import functions from
   gtools gets properly caught by running the examples.

 - upperTriangle.R, man/upperTriangle.Rd: Add functions for
   extracting and modifying the upper and lower trianglular components of
   matrices.

 - is.what.R: Replaced the "not.using" vector with a more robust
   try(get(test)) to find out whether a particular is.* function
   returns a logical of length one.

-  DESCRIPTION: Added Suggests field

 -  Updated the example in frameApply

